--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,24 +1,74 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@font-face {
+  font-family: "Inconsolata ExtraLight";
+  src: url("/fonts/Inconsolata-ExtraLight.ttf") format("opentype");
+  font-weight: 200;
+  font-style: normal;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@font-face {
+  font-family: "Inconsolata Light";
+  src: url("/fonts/Inconsolata-Light.ttf") format("opentype");
+  font-weight: 300;
+  font-style: normal;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+@font-face {
+  font-family: "Inconsolata Regular";
+  src: url("/fonts/Inconsolata-Regular.ttf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
 }
+
+@font-face {
+  font-family: "Inconsolata Medium";
+  src: url("/fonts/Inconsolata-Medium.ttf") format("opentype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Inconsolata SemiBold";
+  src: url("/fonts/Inconsolata-SemiBold.ttf") format("opentype");
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Inconsolata Bold";
+  src: url("/fonts/Inconsolata-Bold.ttf") format("opentype");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Inconsolata ExtraBold";
+  src: url("/fonts/Inconsolata-ExtraBold.ttf") format("opentype");
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Inconsolata Black";
+  src: url("/fonts/Inconsolata-Black.ttf") format("opentype");
+  font-weight: 900;
+  font-style: normal;
+}
+
+@theme {
+  --color-darkpink: #f847b4;
+  --color-lightpink: #ffd9f0;
+}
+
 
 body {
+  font-family: "Inconsolata Regular",  monospace;
+}
 
+.bh-container {
+  width: 100%;
+  padding: 1rem 3rem;
+  margin-right: auto;
+  margin-left: auto;
 }
