--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,23 @@
 @import "tailwindcss";
 
+
+@layer utilities {
+  .animate-slide-in {
+    animation: slideIn 0.3s ease-out forwards;
+  }
+
+  @keyframes slideIn {
+    from {
+      transform: translateX(-100%);
+    }
+    to {
+      transform: translateX(0);
+    }
+  }
+}
+
+
+
 @font-face {
   font-family: "Inconsolata ExtraLight";
   src: url("/fonts/Inconsolata-ExtraLight.ttf") format("opentype");
@@ -72,3 +90,4 @@ body {
   margin-right: auto;
   margin-left: auto;
 }
+
